Fix editor text color to make it visible

--- a/src/App.css
+++ b/src/App.css
@@ -61,7 +61,7 @@
   line-height: 1.6 !important;
   padding: 2rem !important;
   color: #333 !important;
-  background-color: #fff !important;
+  background-color: transparent !important;
   border: none !important;
   outline: none !important;
   resize: none !important;
@@ -71,12 +71,14 @@
   position: absolute !important;
   top: 0 !important;
   left: 0 !important;
-  opacity: 0 !important;
+  caret-color: #333 !important;
   z-index: 1 !important;
+  mix-blend-mode: difference;
 }
 
-.typora-style-editor:focus {
-  opacity: 1 !important;
+.typora-style-editor::selection {
+  background-color: rgba(0, 0, 0, 0.1) !important;
+  mix-blend-mode: normal;
 }
 
 /* Markdown Preview */
@@ -90,18 +92,21 @@
   top: 0;
   left: 0;
   z-index: 0;
+  pointer-events: none;
 }
 
 /* Markdown Elements */
 .markdown-paragraph {
   margin: 1em 0;
   line-height: 1.6;
+  min-height: 1.6em;
 }
 
 .markdown-heading {
   margin: 1.5em 0 0.5em;
   line-height: 1.4;
   font-weight: 600;
+  min-height: 1.4em;
 }
 
 .markdown-heading:first-child {
@@ -125,6 +130,7 @@
   font-size: 0.9em;
   overflow-x: auto;
   margin: 1em 0;
+  min-height: 1.6em;
 }
 
 .markdown-blockquote {
@@ -132,15 +138,18 @@
   padding: 0.5em 1em;
   border-left: 4px solid #ddd;
   color: #666;
+  min-height: 1.6em;
 }
 
 .markdown-list {
   margin: 1em 0;
   padding-left: 2em;
+  min-height: 1.6em;
 }
 
 .markdown-list-item {
   margin: 0.5em 0;
+  min-height: 1.6em;
 }
 
 /* Toolbar */
@@ -175,7 +184,7 @@
 
 /* Focus Mode */
 .focus-mode .typora-style-editor:focus {
-  background-color: #fff !important;
+  background-color: transparent !important;
 }
 
 .focus-mode .markdown-preview {
